# pbitx

./: CMakeLists.txt  README.md
PCB/: bom.xlsx  ubitx_pico_kicad.kicad_pcb  ubitx_pico_kicad.kicad_pro  ubitx_pico_kicad.kicad_sch
PCB/AGC/: agc_smeter.kicad_pcb  agc_smeter.kicad_sch
src/: KBW_keyer.c  dispatch.c  dispatch.h  e_storage.c  e_storage.h  encoder.c  fonts.c  gui_driver.c  gui_driver.h  ili9341.h  morse.h  num_conv.c  num_conv.h  pbitx.c  pbitx.h  setup.c  touch.c  ubitx_si5351.c  ubitx_ui.c
